adding homepage styling

--- a/app/webroot/css/900_style.css
+++ b/app/webroot/css/900_style.css
@@ -6,8 +6,13 @@
 
 /*	Basic Styles
 -------------------------------------------------------------------------*/
-body {
+html {
+	min-height: 700px;
+	background: transparent url(../img/bkg.jpg) repeat 0 0;
+	outline: none;
+	font-family: 'Gudea', sans-serif;
 }
+
 
 /* Headings
 -------------------------------------------------------------------------*/
@@ -63,7 +68,11 @@ h6 {
 	Header Definitions
 	
 -------------------------------------------------------------------------*/
-
+#logo {
+	display: block;
+	margin: 0 0 45px;
+	padding: 20px 0 0;
+}
 
 
 
@@ -79,3 +88,130 @@ h6 {
 	Footer Definitions
 	
 -------------------------------------------------------------------------*/
+#global-footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*-------------------------------------------------------------------------
+
+	Layout Definitions
+	
+-------------------------------------------------------------------------*/
+.container {
+	width: 960px;
+	margin: 0 auto;
+	background: #f1efd7;
+}
+.container.slim {
+	width: 290px;
+	padding: 0 55px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*-------------------------------------------------------------------------
+
+	Inputs Definitions
+
+-------------------------------------------------------------------------*/
+input {
+	display: inline-block;
+	width: 240px;
+	padding: 6px 0 0;
+	margin: 0 15px 0 0;
+	background: transparent;
+	border: 0;
+	border-top: 8px #8a877b solid;
+	outline: none;
+}
+input:focus {
+	border-top: 8px #d01cd8 solid;
+}
+::-webkit-input-placeholder  {
+	color: #6d6e71;
+	font-family: 'Gudea', sans-serif;
+}
+input:-moz-placeholder {
+	color: #6d6e71;
+	font-family: 'Gudea', sans-serif;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*-------------------------------------------------------------------------
+
+	Create Haiku Form Definitions
+
+-------------------------------------------------------------------------*/
+#createHaiku {
+	height: 320px;
+}
+#createHaiku p {
+	margin: 0 0 50px;
+}
+.word-count {
+	display: inline-block;
+	width: 30px;
+	padding: 6px 0 0;
+	border-top: 8px #a7a588 solid;
+	color: #a7a588;
+	text-align: center;
+}
+.form-button {
+	position: relative;
+	right: -75px;
+	top: 0;
+	float: right;
+	padding: 5px 10px;
+	border: 0;
+	background: #b72c9f;
+	color: #fff;
+	font-family: 'Gudea', sans-serif;
+}
+.form-button::after {  
+	content: ' ';
+	position: absolute;  
+	width: 0;
+	height: 0;  
+	right: 0;
+	top: 100%;  
+	border-width: 5px 10px;  
+	border-style: solid;
+	border-color: #3f0544 transparent transparent #3f0544;  
+}
+.form-button:hover {
+	background: #a11989;
+}
