--- a/app/webroot/css/900_style.css
+++ b/app/webroot/css/900_style.css
@@ -12,6 +12,15 @@ html {
 	outline: none;
 	font-family: 'Gudea', sans-serif;
 }
+body.full-background {
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
 
 
 /* Headings
