--- a/app/webroot/css/900_style.css
+++ b/app/webroot/css/900_style.css
@@ -101,8 +101,14 @@ h6 {
 -------------------------------------------------------------------------*/
 #global-footer {
 	position: absolute;
-	bottom: 0;
+	bottom: 10px;
 	left: 0;
+	width:100%;
+}
+#global-footer p {
+	text-align:center;
+	color:#ffffff;
+	text-shadow:1px 1px 1px #000;
 }
 
 
@@ -168,6 +174,9 @@ input:focus {
 input:-moz-placeholder {
 	color: #6d6e71;
 	font-family: 'Gudea', sans-serif;
+}
+input.form-error {
+	border-color:red;
 }
 
 
