setup ugly flagging needs better button design, needs success messages, needs ajax timeout, needs ajax errors... probably a few things I havent thought of too, but the shit works

--- a/app/webroot/css/900_style.css
+++ b/app/webroot/css/900_style.css
@@ -334,10 +334,18 @@ input.form-error {
 .facebook-container {
 	position: relative;
 	top: -4px;
-	width: 109px;
+	width: 132px;
 }
 .stumbleupon-container {
 	position: relative;
 	top: -1px;
 	width: 69px;
+}
+#FlagFlagForm {
+	width: 70px;
+}
+.flag-submit {
+	border: 0;
+	width: 70px;
+	display: inline;
 }
