--- a/app/webroot/css/900_style.css
+++ b/app/webroot/css/900_style.css
@@ -323,8 +323,13 @@ input.form-error {
 }
 .inner-social-container {
 	position: relative;
-	z-index: 10;
 	display: inline-block;
+}
+.flag-container {
+	position: relative;
+	display: inline-block;
+	top: -6px;
+	z-index: 10;
 }
 .twitter-container {
 	width: 80px;
@@ -338,7 +343,7 @@ input.form-error {
 	position: relative;
 	z-index: 1;
 	top: -4px;
-	width: 132px;
+	width: 134px;
 }
 .stumbleupon-container {
 	position: relative;
@@ -352,4 +357,54 @@ input.form-error {
 	border: 0;
 	width: 70px;
 	display: inline;
+}
+.flag-button {
+	position: relative;
+	display: block;
+	height: 18px;
+	padding: 2px 5px 5px 5px;
+	border-style: solid;
+	border-width: 1px;
+	color: #fff;
+	font-family: sans-serif;
+	font-size: 11px;
+	text-decoration: none;
+
+	border-radius: 3px;
+}
+input.flag-button {
+	position: relative;
+	display: block;
+	height: 25px;
+	padding: 6px 0 5px 0;
+	color: #fff;
+	font-family: sans-serif;
+	font-size: 12px;
+
+	border-radius: 3px;
+}
+.flag-button span {
+	position: relative;
+	display: inline-block;
+	top: 2px;
+	font-size: 16px;
+}
+.Flag,
+input.Flagged {
+	background: #D81670;
+	border-top-color: #ED4593;
+	border-right-color: #900E4B;
+	border-bottom-color: #900E4B;
+	border-left-color: #ED4593;
+}
+a.Flagged {
+	background: #A74A9B;
+	border-top-color: #C171B6;
+	border-right-color: #6E3066;
+	border-bottom-color: #6E3066;
+	border-left-color: #C171B6;
+}
+.Flag:hover,
+input.Flagged:hover {
+	background: #bc045a;
 }
