--- a/app/webroot/css/900_style.css
+++ b/app/webroot/css/900_style.css
@@ -381,7 +381,10 @@ input.flag-button {
 	font-family: sans-serif;
 	font-size: 12px;
 
-	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	   -moz-border-radius: 3px;
+			border-radius: 3px;
+
 }
 .flag-button span {
 	position: relative;
