--- a/app/webroot/css/900_style.css
+++ b/app/webroot/css/900_style.css
@@ -328,7 +328,7 @@ input.form-error {
 .flag-container {
 	position: relative;
 	display: inline-block;
-	top: -6px;
+	float: right;
 	z-index: 10;
 }
 .twitter-container {
@@ -375,11 +375,13 @@ input.form-error {
 input.flag-button {
 	position: relative;
 	display: block;
-	height: 25px;
-	padding: 6px 0 5px 0;
+	height: 27px;
+	width: 46px;
+	padding: 7px 13px 5px 1px;
+	margin: 0;
 	color: #fff;
 	font-family: sans-serif;
-	font-size: 12px;
+	font-size: 11px;
 
 	-webkit-border-radius: 3px;
 	   -moz-border-radius: 3px;
