--- a/app/webroot/css/900_style.css
+++ b/app/webroot/css/900_style.css
@@ -368,6 +368,7 @@ input.form-error {
 	color: #fff;
 	font-family: sans-serif;
 	font-size: 11px;
+	line-height: 20px;
 	text-decoration: none;
 
 	border-radius: 3px;
